Added css and property injection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ server.port=8090
 spring.mvc.view.prefix:view/jsp/
 spring.mvc.view.suffix:.jsp
 
-welcome.message: Welcome Denia
+welcome.message: Welcome Denia!
