--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
 			<artifactId>tomcat-jasper</artifactId>
 			<version>9.0.19</version>
 		</dependency>
+
+		<!--Database -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.48</version>
+		</dependency>
 	</dependencies>
 
 
