--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,17 @@ server.port=8090
 spring.mvc.view.prefix:view/jsp/
 spring.mvc.view.suffix:.jsp
 
+#DB properties :
+spring.datasource.url=jdbc:mysql://localhost:3318/expenses
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#Jpa/Hibernate :
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=true
+
 welcome.message: Welcome Denia!
