Added spring boot security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,8 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=true
 
+#Security properties:
+spring.security.user.name=denia
+spring.security.user.password=deniaPswd
+
 welcome.message: Welcome Denia!
