--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,6 @@ spring.jpa.generate-ddl=true
 
 #Security properties:
 spring.security.user.name=denia
-spring.security.user.password=deniaPswd
+spring.security.user.password=deniaPwd
 
 welcome.message: Welcome Denia!
