--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,10 @@ spring.jpa.generate-ddl=true
 spring.security.user.name=denia
 spring.security.user.password=deniaPwd
 
+#logging properties
+logging.file.name=logs/expenses.log
+
+#Thymeleaf properties
+#server.error.whitelabel.enabled=false
+
 welcome.message: Welcome Denia!
